📅 add cal.com integration

--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@calcom/embed-react": "^1.0.12",
+    "@radix-ui/react-dialog": "^1.0.3",
     "@usesuperflow/client": "^1.0.2",
+    "lucide-react": "^0.145.0",
     "next": "^13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^1.12.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -24,6 +28,7 @@
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
+    "clsx": "^1.2.1",
     "eslint": "^8.36.0",
     "eslint-config-next": "^13.2.4",
     "postcss": "^8.4.21",
