--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@calcom/embed-react": "^1.0.12",
+    "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-dialog": "^1.0.3",
     "@usesuperflow/client": "^1.0.2",
     "lucide-react": "^0.145.0",
