--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-dialog": "^1.0.3",
     "@usesuperflow/client": "^1.0.2",
+    "@vercel/analytics": "^0.1.11",
+    "class-variance-authority": "^0.5.2",
+    "contentlayer": "^0.3.1",
     "lucide-react": "^0.145.0",
     "next": "^13.2.4",
+    "next-contentlayer": "^0.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.12.0",
