--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
     "@usesuperflow/client": "^1.0.2",
     "@vercel/analytics": "^0.1.11",
     "class-variance-authority": "^0.5.2",
-    "contentlayer": "^0.3.1",
+    "contentlayer": "^0.3.0",
+    "date-fns": "^2.29.3",
     "lucide-react": "^0.145.0",
-    "next": "^13.2.4",
-    "next-contentlayer": "^0.3.1",
+    "next": "^13.2.5-canary.17",
+    "next-contentlayer": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-wrap-balancer": "^0.4.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-pretty-code": "^0.9.2",
+    "rehype-slug": "^5.1.0",
+    "remark-gfm": "^3.0.1",
     "tailwind-merge": "^1.12.0",
     "zod": "^3.21.4"
   },
