--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-contentlayer": "^0.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "tailwind-merge": "^1.12.0",
     "zod": "^3.21.4"
   },
