--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "next-contentlayer": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-wrap-balancer": "^0.4.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-pretty-code": "^0.9.2",
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
-    "react-icons": "^4.8.0",
-    "react-slick": "^0.29.0",
+    "swiper": "^9.2.4",
     "tailwind-merge": "^1.12.0",
     "zod": "^3.21.4"
   },
@@ -38,7 +38,6 @@
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
