--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@calcom/embed-react": "^1.0.12",
     "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-dialog": "^1.0.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-select": "^1.2.1",
+    "@radix-ui/react-tabs": "^1.0.3",
     "@usesuperflow/client": "^1.0.2",
     "@vercel/analytics": "^0.1.11",
     "class-variance-authority": "^0.5.2",
@@ -30,6 +33,7 @@
     "remark-gfm": "^3.0.1",
     "swiper": "^9.2.4",
     "tailwind-merge": "^1.12.0",
+    "tailwindcss-animate": "^1.0.5",
     "zod": "^3.21.4"
   },
   "devDependencies": {
