--- a/package.json
+++ b/package.json
@@ -14,28 +14,34 @@
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-select": "^1.2.1",
+    "@radix-ui/react-separator": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.3",
     "@usesuperflow/client": "^1.0.2",
     "@vercel/analytics": "^0.1.11",
+    "@vercel/og": "^0.5.4",
     "class-variance-authority": "^0.5.2",
     "contentlayer": "^0.3.0",
     "date-fns": "^2.29.3",
+    "fecha": "^4.2.3",
     "lucide-react": "^0.145.0",
     "next": "^13.2.5-canary.17",
     "next-contentlayer": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-share": "^4.4.1",
     "react-wrap-balancer": "^0.4.0",
+    "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^6.1.1",
-    "rehype-pretty-code": "^0.9.2",
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
+    "schema-dts": "^1.1.2",
     "swiper": "^9.2.4",
     "tailwind-merge": "^1.12.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/eslint": "^8.21.3",
     "@types/node": "^18.15.5",
     "@types/prettier": "^2.7.2",
