--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "contentlayer": "^0.3.0",
     "date-fns": "^2.29.3",
     "fecha": "^4.2.3",
+    "hamburger-react": "^2.5.0",
     "lucide-react": "^0.145.0",
     "next": "^13.2.5-canary.17",
     "next-contentlayer": "^0.3.0",
