--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-separator": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.3",
-    "@usesuperflow/client": "^1.0.2",
     "@vercel/analytics": "^0.1.11",
     "@vercel/og": "^0.5.4",
     "class-variance-authority": "^0.5.2",
@@ -28,6 +27,7 @@
     "next": "^13.2.5-canary.17",
     "next-contentlayer": "^0.3.0",
     "react": "18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-share": "^4.4.1",
