--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "fecha": "^4.2.3",
     "hamburger-react": "^2.5.0",
     "lucide-react": "^0.145.0",
-    "next": "^13.2.5-canary.17",
+    "next": "^13.4.1",
     "next-contentlayer": "^0.3.0",
     "react": "18.2.0",
     "react-countup": "^6.4.2",
