--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-contentlayer": "^0.3.0",
     "react": "18.2.0",
     "react-countup": "^6.4.2",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-share": "^4.4.1",
