--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.5.2",
     "contentlayer": "^0.3.0",
     "date-fns": "^2.29.3",
+    "detect-browser": "^5.3.0",
     "fecha": "^4.2.3",
     "hamburger-react": "^2.5.0",
     "lucide-react": "^0.145.0",
