--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-separator": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.3",
+    "@radix-ui/react-tooltip": "^1.0.6",
+    "@react-google-maps/api": "^2.18.1",
+    "@react-spring/web": "^9.7.2",
     "@vercel/analytics": "^0.1.11",
     "@vercel/og": "^0.5.4",
     "class-variance-authority": "^0.5.2",
