--- a/package.json
+++ b/package.json
@@ -39,11 +39,17 @@
     "react-wrap-balancer": "^0.4.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^6.1.1",
+    "rehype-parse": "^8.0.4",
+    "rehype-react": "^7.2.0",
     "rehype-slug": "^5.1.0",
+    "rehype-stringify": "^9.0.3",
     "remark-gfm": "^3.0.1",
+    "remark-parse": "^10.0.2",
+    "remark-rehype": "^10.1.0",
     "schema-dts": "^1.1.2",
     "swiper": "^9.2.4",
     "tailwind-merge": "^1.6.0",
+    "unified": "^10.1.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
