--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@calcom/embed-react": "^1.0.12",
+    "@opentelemetry/api": "^1.4.1",
     "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
@@ -23,13 +24,13 @@
     "@vercel/analytics": "^0.1.11",
     "@vercel/og": "^0.5.4",
     "class-variance-authority": "^0.5.2",
-    "contentlayer": "^0.3.0",
+    "contentlayer": "^0.3.3",
     "date-fns": "^2.29.3",
     "fecha": "^4.2.3",
     "hamburger-react": "^2.5.0",
     "lucide-react": "^0.145.0",
-    "next": "^13.4.1",
-    "next-contentlayer": "^0.3.0",
+    "next": "^13.2.4",
+    "next-contentlayer": "^0.3.3",
     "react": "18.2.0",
     "react-countup": "^6.4.2",
     "react-device-detect": "^2.2.3",
